--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 
 spring:
   sql:
-    mode: always
+    init:
+      mode: always
   datasource:
     url: jdbc:h2:file:./db/filmorate
     username: sa
     password: password
     driverClassName: org.h2.Driver
   jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
+
